# packet-capture-benchmarks

./: Makefile.in  benchmark.sh  configure  configure.ac  html-graphics-template.html  results_analyzer.py
dpkt/: benchmark
impacket/: benchmark
libcrafter/: benchmark.cpp
libpcap/: benchmark.cpp
libtins/: benchmark.cpp
pcap_generator/: generator.cpp
pcapplusplus/: benchmark.cpp
scapy/: benchmark
